syntax = "proto3";

package llvm_ml;

message BBMetrics {
  uint64 noise_cycles = 1;
  uint64 noise_cache_misses = 2;
  uint64 noise_context_switches = 3;
  uint64 total_cycles = 4;
  uint64 total_cache_misses = 5;
  uint64 total_context_switches = 6;
  uint64 measured_cycles = 7;
  optional string source = 8;
}
